gccida/g0/c_expand_start_else
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:802:4: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
&& if_stack_0[if_stack_pointer - 1].compstmt_count == if_stack_0[if_stack_pointer - 2].compstmt_count ) 
   ^~~~~~~~~~
   if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:802:55: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
&& if_stack_0[if_stack_pointer - 1].compstmt_count == if_stack_0[if_stack_pointer - 2].compstmt_count ) 
                                                      ^~~~~~~~~~
                                                      if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:804:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer - 2].needs_warning = 1; 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:806:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer - 1].needs_warning = 0; 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:807:3: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
--if_stack_0[if_stack_pointer - 1].compstmt_count; 
  ^~~~~~~~~~
  if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_else/src/obj/c-common.o] Error 1
